--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gatsby": "^1.9.250",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-netlify-cms": "^2.0.1",
-    "netlify-cms": "^1.9.3"
+    "gatsby-plugin-styled-components": "^2.0.11",
+    "netlify-cms": "^1.9.3",
+    "styled-components": "^3.3.3"
   }
 }
