--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,4 +14,4 @@ collections:
       - { name: path, label: Path }
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
-      - { name: body, label: Body, widget: markdown }
+      - { name: body, label: Body, widget: markdown }git 
