--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,20 +6,10 @@ media_folder: static/assets
 public_folder: assets
 
 collections:
-  - name: blog
-    label: Blog
-    folder: blog
-    create: true
-    fields:
-      - { name: path, label: Path }
-      - { name: date, label: Date, widget: date }
-      - { name: title, label: Title }
-      - { name: body, label: Body, widget: markdown }
-
 
   - name: projects
     label: Projects
-    folder: projects
+    folder: 'src/pages/projects'
     create: true
     fields:
       - { name: path, label: Path }
