--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "description": "Gatsby hello world starter",
+  "name": "Philip-Portfolio",
+  "description": "Philip-Portfolio",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
@@ -8,9 +8,9 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^1.9.250",
-    "gatsby-image": "^1.0.55",
-    "gatsby-link": "^1.6.40",
+    "gatsby": "^2.0.0-beta.66",
+    "gatsby-image": "^2.0.0-beta.7",
+    "gatsby-link": "^2.0.0-beta.6",
     "gatsby-plugin-netlify": "^1.0.21",
     "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-react-helmet": "^2.0.11",
@@ -19,12 +19,14 @@
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-remark-copy-linked-files": "^1.5.37",
     "gatsby-remark-emojis": "^0.2.3",
-    "gatsby-remark-images": "^1.5.67",
+    "gatsby-remark-images": "^2.0.1-beta.9",
     "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-remark": "^1.7.44",
-    "gatsby-transformer-sharp": "^1.6.27",
-    "netlify-cms": "^1.9.3",
+    "gatsby-transformer-remark": "^2.1.1-beta.5",
+    "gatsby-transformer-sharp": "^2.1.1-beta.6",
+    "netlify-cms": "^2.0.8",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.4.0"
   }
 }
