--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.5.1",
+    "babel-plugin-styled-components": "0.0.3-0",
     "gatsby": "^2.0.0-beta.66",
     "gatsby-image": "^2.0.0-beta.7",
     "gatsby-link": "^2.0.0-beta.6",
     "gatsby-plugin-netlify": "^1.0.21",
     "gatsby-plugin-netlify-cms": "^2.0.1",
-    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
     "gatsby-plugin-sass": "^2.0.0-beta.6",
     "gatsby-plugin-sharp": "^2.0.0-beta.7",
     "gatsby-plugin-styled-components": "^3.0.0-beta.3",
-    "gatsby-remark-copy-linked-files": "^1.5.37",
+    "gatsby-remark-copy-linked-files": "^2.0.0-beta.3",
     "gatsby-remark-emojis": "^0.2.3",
     "gatsby-remark-images": "^2.0.1-beta.9",
-    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-source-filesystem": "^2.0.1-beta.10",
     "gatsby-transformer-remark": "^2.1.1-beta.5",
     "gatsby-transformer-sharp": "^2.1.1-beta.6",
     "netlify-cms": "^2.0.8",
