--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "gatsby-plugin-sass": "^2.0.0-beta.6",
     "gatsby-plugin-sharp": "^2.0.0-beta.7",
     "gatsby-plugin-styled-components": "^3.0.0-beta.3",
+    "gatsby-remark-copy-images": "^0.2.1",
     "gatsby-remark-copy-linked-files": "^2.0.0-beta.3",
     "gatsby-remark-emojis": "^0.2.3",
     "gatsby-remark-images": "^2.0.1-beta.9",
+    "gatsby-remark-responsive-iframe": "^1.4.20",
     "gatsby-source-filesystem": "^2.0.1-beta.10",
     "gatsby-transformer-remark": "^2.1.1-beta.5",
     "gatsby-transformer-sharp": "^2.1.1-beta.6",
