--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-remark": "^2.1.1-beta.5",
     "gatsby-transformer-sharp": "^2.1.1-beta.6",
     "netlify-cms": "^2.0.8",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
