--- a/package.json
+++ b/package.json
@@ -8,29 +8,35 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "0.0.3-0",
-    "gatsby": "^2.0.0-beta.92",
+    "babel-plugin-styled-components": "^1.5.1",
+    "gatsby": "^2.0.0-beta.93",
     "gatsby-image": "^2.0.0-beta.7",
-    "gatsby-link": "^2.0.0-beta.6",
-    "gatsby-plugin-netlify": "^1.0.21",
-    "gatsby-plugin-netlify-cms": "^2.0.1",
+    "gatsby-link": "^2.0.0-beta.19",
     "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
-    "gatsby-plugin-sass": "^2.0.0-beta.6",
+    "gatsby-plugin-sass": "^2.0.0-beta.10",
     "gatsby-plugin-sharp": "^2.0.0-beta.7",
     "gatsby-plugin-styled-components": "^3.0.0-beta.3",
     "gatsby-remark-copy-images": "^0.2.1",
     "gatsby-remark-copy-linked-files": "^2.0.0-beta.3",
     "gatsby-remark-emojis": "^0.2.3",
-    "gatsby-remark-images": "^2.0.1-beta.9",
+    "gatsby-remark-images": "^2.0.1-beta.10",
     "gatsby-remark-responsive-iframe": "^1.4.20",
     "gatsby-source-filesystem": "^2.0.1-beta.10",
-    "gatsby-transformer-remark": "^2.1.1-beta.5",
+    "gatsby-transformer-remark": "^2.1.1-beta.6",
     "gatsby-transformer-sharp": "^2.1.1-beta.6",
     "netlify-cms": "^2.0.9",
+    "netlify-cms-backend-bitbucket": "^2.0.4",
+    "netlify-cms-lib-auth": "^2.0.3",
+    "netlify-cms-ui-default": "^2.0.4",
+    "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.4.0"
+    "slate": "^0.31.8",
+    "slate-edit-list": "^0.12.0",
+    "slate-plain-serializer": "^0.5.30",
+    "slate-react": "^0.15.4",
+    "styled-components": "^3.4.2"
   }
 }
