--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "slate-plain-serializer": "^0.5.30",
     "slate-react": "^0.15.4",
     "styled-components": "^3.4.2"
+  },
+  "devDependencies": {
+    "gatsby-remark-static-images": "^1.0.0"
   }
 }
