--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.0.0-beta.93",
     "gatsby-image": "^2.0.0-beta.7",
     "gatsby-link": "^2.0.0-beta.19",
+    "gatsby-plugin-intercom-spa": "0.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
     "gatsby-plugin-sass": "^2.0.0-beta.10",
     "gatsby-plugin-sharp": "^2.0.0-beta.7",
@@ -33,6 +34,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
+    "sharp": "^0.20.5",
     "slate": "^0.31.8",
     "slate-edit-list": "^0.12.0",
     "slate-plain-serializer": "^0.5.30",
