--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-image": "^2.0.0-beta.7",
     "gatsby-link": "^2.0.0-beta.19",
     "gatsby-plugin-intercom-spa": "0.0.5",
+    "gatsby-plugin-mixpanel": "^1.1.3",
     "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
     "gatsby-plugin-sass": "^2.0.0-beta.10",
     "gatsby-plugin-sharp": "^2.0.0-beta.7",
