--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.5.1",
     "gatsby": "^2.0.0-beta.93",
-    "gatsby-image": "^2.0.0-beta.7",
+    "gatsby-image": "^2.0.0-beta.8",
     "gatsby-link": "^2.0.0-beta.19",
     "gatsby-plugin-intercom-spa": "0.0.5",
     "gatsby-plugin-mixpanel": "^1.1.3",
@@ -23,6 +23,7 @@
     "gatsby-remark-emoji": "0.0.2",
     "gatsby-remark-emojis": "^0.2.3",
     "gatsby-remark-images": "^2.0.1-beta.10",
+    "gatsby-remark-relative-images": "^0.1.2",
     "gatsby-remark-responsive-iframe": "^1.4.20",
     "gatsby-source-filesystem": "^2.0.1-beta.10",
     "gatsby-transformer-remark": "^2.1.1-beta.6",
