--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gatsby-remark-responsive-iframe": "^1.4.20",
     "gatsby-source-filesystem": "^2.0.1-beta.10",
     "gatsby-transformer-remark": "^2.1.1-beta.6",
-    "gatsby-transformer-sharp": "^2.1.1-beta.6",
+    "gatsby-transformer-sharp": "^2.1.1-rc.0",
     "netlify-cms": "^2.0.9",
     "netlify-cms-backend-bitbucket": "^2.0.4",
     "netlify-cms-lib-auth": "^2.0.3",
