--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "0.0.3-0",
+    "babel-plugin-styled-components": "^1.5.1",
     "gatsby": "^2.0.0-rc.0",
     "gatsby-image": "^2.0.0-rc.0",
     "gatsby-link": "^2.0.0-rc.0",
