--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-hamburger-menu": "^1.1.1",
     "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.0",
     "sharp": "^0.20.7",
