--- a/package.json
+++ b/package.json
@@ -8,29 +8,30 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.5.1",
-    "gatsby": "^2.0.0-rc.0",
-    "gatsby-image": "^2.0.0-rc.0",
-    "gatsby-link": "^2.0.0-rc.0",
+    "babel-plugin-styled-components": "^1.6.0",
+    "gatsby": "^2.0.0-rc.7",
+    "gatsby-image": "^2.0.0-rc.1",
+    "gatsby-link": "^2.0.0-rc.2",
     "gatsby-plugin-intercom-spa": "0.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0-rc.0",
-    "gatsby-plugin-sass": "^2.0.0-rc.0",
-    "gatsby-plugin-sharp": "^2.0.0-rc.0",
-    "gatsby-plugin-styled-components": "^3.0.0-rc.0",
+    "gatsby-plugin-mixpanel": "^1.1.3",
+    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
+    "gatsby-plugin-sass": "^2.0.0-rc.1",
+    "gatsby-plugin-sharp": "^2.0.0-rc.3",
+    "gatsby-plugin-styled-components": "^3.0.0-rc.1",
     "gatsby-remark-copy-images": "^0.2.1",
-    "gatsby-remark-copy-linked-files": "^2.0.0-rc.0",
+    "gatsby-remark-copy-linked-files": "^2.0.0-rc.1",
     "gatsby-remark-emoji": "0.0.2",
     "gatsby-remark-emojis": "^0.2.3",
-    "gatsby-remark-images": "^2.0.1-rc.0",
+    "gatsby-remark-images": "^2.0.1-rc.1",
     "gatsby-remark-relative-images": "^0.1.2",
     "gatsby-remark-responsive-iframe": "^1.4.20",
-    "gatsby-source-filesystem": "^2.0.1-rc.0",
-    "gatsby-transformer-remark": "^2.1.1-rc.0",
-    "gatsby-transformer-sharp": "^2.1.1-rc.0",
-    "netlify-cms": "^2.0.9",
-    "netlify-cms-backend-bitbucket": "^2.0.4",
-    "netlify-cms-lib-auth": "^2.0.3",
-    "netlify-cms-ui-default": "^2.0.4",
+    "gatsby-source-filesystem": "^2.0.1-rc.1",
+    "gatsby-transformer-remark": "^2.1.1-rc.1",
+    "gatsby-transformer-sharp": "^2.1.1-rc.2",
+    "netlify-cms": "^2.0.11",
+    "netlify-cms-backend-bitbucket": "^2.0.6",
+    "netlify-cms-lib-auth": "^2.0.4",
+    "netlify-cms-ui-default": "^2.0.6",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -41,9 +42,9 @@
     "sharp": "^0.20.7",
     "slate": "^0.31.8",
     "slate-edit-list": "^0.12.1",
-    "slate-plain-serializer": "^0.5.36",
+    "slate-plain-serializer": "^0.5.41",
     "slate-react": "^0.15.9",
-    "styled-components": "^3.4.4"
+    "styled-components": "^3.4.5"
   },
   "devDependencies": {
     "gatsby-remark-static-images": "^1.0.0"
