--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gatsby-remark-responsive-iframe": "^1.4.20",
     "gatsby-source-filesystem": "^2.0.1-rc.1",
     "gatsby-transformer-remark": "^2.1.1-rc.1",
-    "gatsby-transformer-sharp": "^2.1.1-rc.2",
+    "gatsby-transformer-sharp": "^1.6.27",
     "netlify-cms": "^2.0.11",
     "netlify-cms-backend-bitbucket": "^2.0.6",
     "netlify-cms-lib-auth": "^2.0.4",
